# MergeSortOptimizations

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix  shell.nix
src/: benchmark.cpp  mergesort.h  mergesort_default.cpp  mergesort_frag.cpp  mergesort_hands.cpp  mergesort_one_malloc.cpp  stdsort.cpp  stdstablesort.cpp  tests.cpp  utils.cpp  utils.h
